[package]
name = "gitlab-package-json-rank"
version = "1.0.0"
authors = ["Nicholas Lee <lizhongit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1", features = ["derive"] }
serde_yaml = "0.8"
log = "0.4"
env_logger = "0.7"
reqwest = "0.9"
http = "0.2"
serde_json = "1.0"
chrono = "0.4"
